arregle el plot de cramer y correlacion

--- a/Proyecto1/Proyecto_enunciado.ipynb
+++ b/Proyecto1/Proyecto_enunciado.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,289 +166,14 @@
     "from collections import Counter\n",
     "import shutil\n",
     "import numpy as np\n",
-    "\n",
+    "import seaborn as sns\n",
     "\n",
     "df = pd.read_parquet('olimpiadas.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>NOC</th>\n",
-       "      <th>Games</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Season</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Sport</th>\n",
-       "      <th>Event</th>\n",
-       "      <th>Medal</th>\n",
-       "      <th>age-height-weight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>A Dijiang</td>\n",
-       "      <td>M</td>\n",
-       "      <td>China</td>\n",
-       "      <td>CHN</td>\n",
-       "      <td>1992 Summer</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>Summer</td>\n",
-       "      <td>Barcelona</td>\n",
-       "      <td>Basketball</td>\n",
-       "      <td>Basketball Men's Basketball</td>\n",
-       "      <td>None</td>\n",
-       "      <td>24.0*180.0?80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>A Lamusi</td>\n",
-       "      <td>M</td>\n",
-       "      <td>China</td>\n",
-       "      <td>CHN</td>\n",
-       "      <td>2012 Summer</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Summer</td>\n",
-       "      <td>London</td>\n",
-       "      <td>Judo</td>\n",
-       "      <td>Judo Men's Extra-Lightweight</td>\n",
-       "      <td>None</td>\n",
-       "      <td>23.0(170.0?60.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Gunnar Nielsen Aaby</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Denmark</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>1920 Summer</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>Summer</td>\n",
-       "      <td>Antwerpen</td>\n",
-       "      <td>Football</td>\n",
-       "      <td>Football Men's Football</td>\n",
-       "      <td>None</td>\n",
-       "      <td>24.0(nan?nan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Edgar Lindenau Aabye</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Denmark/Sweden</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>1900 Summer</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>Summer</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>Tug-Of-War</td>\n",
-       "      <td>Tug-Of-War Men's Tug-Of-War</td>\n",
-       "      <td>Gold</td>\n",
-       "      <td>34.0:nan?nan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Christine Jacoba Aaftink</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Netherlands</td>\n",
-       "      <td>NED</td>\n",
-       "      <td>1988 Winter</td>\n",
-       "      <td>1988</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Calgary</td>\n",
-       "      <td>Speed Skating</td>\n",
-       "      <td>Speed Skating Women's 500 metres</td>\n",
-       "      <td>None</td>\n",
-       "      <td>21.0(185.0?82.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>271111</th>\n",
-       "      <td>135569</td>\n",
-       "      <td>Andrzej ya</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Poland-1</td>\n",
-       "      <td>POL</td>\n",
-       "      <td>1976 Winter</td>\n",
-       "      <td>1976</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Innsbruck</td>\n",
-       "      <td>Luge</td>\n",
-       "      <td>Luge Mixed (Men)'s Doubles</td>\n",
-       "      <td>None</td>\n",
-       "      <td>29.0:179.0?89.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>271112</th>\n",
-       "      <td>135570</td>\n",
-       "      <td>Piotr ya</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Poland</td>\n",
-       "      <td>POL</td>\n",
-       "      <td>2014 Winter</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Sochi</td>\n",
-       "      <td>Ski Jumping</td>\n",
-       "      <td>Ski Jumping Men's Large Hill, Individual</td>\n",
-       "      <td>None</td>\n",
-       "      <td>27.0:176.0?59.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>271113</th>\n",
-       "      <td>135570</td>\n",
-       "      <td>Piotr ya</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Poland</td>\n",
-       "      <td>POL</td>\n",
-       "      <td>2014 Winter</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Sochi</td>\n",
-       "      <td>Ski Jumping</td>\n",
-       "      <td>Ski Jumping Men's Large Hill, Team</td>\n",
-       "      <td>None</td>\n",
-       "      <td>27.0*176.0?59.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>271114</th>\n",
-       "      <td>135571</td>\n",
-       "      <td>Tomasz Ireneusz ya</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Poland</td>\n",
-       "      <td>POL</td>\n",
-       "      <td>1998 Winter</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Nagano</td>\n",
-       "      <td>Bobsleigh</td>\n",
-       "      <td>Bobsleigh Men's Four</td>\n",
-       "      <td>None</td>\n",
-       "      <td>30.0(185.0?96.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>271115</th>\n",
-       "      <td>135571</td>\n",
-       "      <td>Tomasz Ireneusz ya</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Poland</td>\n",
-       "      <td>POL</td>\n",
-       "      <td>2002 Winter</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Salt Lake City</td>\n",
-       "      <td>Bobsleigh</td>\n",
-       "      <td>Bobsleigh Men's Four</td>\n",
-       "      <td>None</td>\n",
-       "      <td>34.0(185.0?96.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>271116 rows × 13 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            ID                      Name Sex            Team  NOC  \\\n",
-       "0            1                 A Dijiang   M           China  CHN   \n",
-       "1            2                  A Lamusi   M           China  CHN   \n",
-       "2            3       Gunnar Nielsen Aaby   M         Denmark  DEN   \n",
-       "3            4      Edgar Lindenau Aabye   M  Denmark/Sweden  DEN   \n",
-       "4            5  Christine Jacoba Aaftink   F     Netherlands  NED   \n",
-       "...        ...                       ...  ..             ...  ...   \n",
-       "271111  135569                Andrzej ya   M        Poland-1  POL   \n",
-       "271112  135570                  Piotr ya   M          Poland  POL   \n",
-       "271113  135570                  Piotr ya   M          Poland  POL   \n",
-       "271114  135571        Tomasz Ireneusz ya   M          Poland  POL   \n",
-       "271115  135571        Tomasz Ireneusz ya   M          Poland  POL   \n",
-       "\n",
-       "              Games  Year  Season            City          Sport  \\\n",
-       "0       1992 Summer  1992  Summer       Barcelona     Basketball   \n",
-       "1       2012 Summer  2012  Summer          London           Judo   \n",
-       "2       1920 Summer  1920  Summer       Antwerpen       Football   \n",
-       "3       1900 Summer  1900  Summer           Paris     Tug-Of-War   \n",
-       "4       1988 Winter  1988  Winter         Calgary  Speed Skating   \n",
-       "...             ...   ...     ...             ...            ...   \n",
-       "271111  1976 Winter  1976  Winter       Innsbruck           Luge   \n",
-       "271112  2014 Winter  2014  Winter           Sochi    Ski Jumping   \n",
-       "271113  2014 Winter  2014  Winter           Sochi    Ski Jumping   \n",
-       "271114  1998 Winter  1998  Winter          Nagano      Bobsleigh   \n",
-       "271115  2002 Winter  2002  Winter  Salt Lake City      Bobsleigh   \n",
-       "\n",
-       "                                           Event Medal age-height-weight  \n",
-       "0                    Basketball Men's Basketball  None   24.0*180.0?80.0  \n",
-       "1                   Judo Men's Extra-Lightweight  None   23.0(170.0?60.0  \n",
-       "2                        Football Men's Football  None      24.0(nan?nan  \n",
-       "3                    Tug-Of-War Men's Tug-Of-War  Gold      34.0:nan?nan  \n",
-       "4               Speed Skating Women's 500 metres  None   21.0(185.0?82.0  \n",
-       "...                                          ...   ...               ...  \n",
-       "271111                Luge Mixed (Men)'s Doubles  None   29.0:179.0?89.0  \n",
-       "271112  Ski Jumping Men's Large Hill, Individual  None   27.0:176.0?59.0  \n",
-       "271113        Ski Jumping Men's Large Hill, Team  None   27.0*176.0?59.0  \n",
-       "271114                      Bobsleigh Men's Four  None   30.0(185.0?96.0  \n",
-       "271115                      Bobsleigh Men's Four  None   34.0(185.0?96.0  \n",
-       "\n",
-       "[271116 rows x 13 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +225,7 @@
     "                    \n",
     "                    file.write('\\n')\n",
     "                    \n",
-    "    # 3          \n",
+    "    # 3       \n",
     "    def plot_vars(self, variables_of_interest=None, top_n_categories=5):\n",
     "        plots_folder = os.path.join(self.output_folder, 'plots')\n",
     "        os.makedirs(plots_folder, exist_ok=True)\n",
@@ -508,13 +233,30 @@
     "        if variables_of_interest is None:\n",
     "            variables_of_interest = self.data.columns\n",
     "\n",
+    "        numeric_variables = [var for var in variables_of_interest if pd.api.types.is_numeric_dtype(self.data[var])]\n",
+    "        categorical_variables = [var for var in variables_of_interest if pd.api.types.is_string_dtype(self.data[var])]\n",
+    "\n",
+    "        # Plot de correlación entre variables numéricas\n",
+    "        self.plot_correlation(numeric_variables, plots_folder)\n",
+    "\n",
+    "        # Plot de matriz de correlación de V de Cramer entre variables categóricas\n",
+    "        self.plot_categorical_cramer_matrix(categorical_variables, plots_folder)\n",
+    "\n",
     "        for variable in variables_of_interest:\n",
     "            if variable in self.data.columns:\n",
     "                if pd.api.types.is_numeric_dtype(self.data[variable]):\n",
     "                    self.plot_numeric_variable(variable, plots_folder)\n",
-    "\n",
     "                elif pd.api.types.is_string_dtype(self.data[variable]):\n",
-    "                    self.plot_categorical_variable(variable, top_n_categories, plots_folder)\n",
+    "                    self.plot_categorical_variable(variable, top_n_categories, plots_folder)                     \n",
+    "\n",
+    "    def plot_correlation(self, variables_of_interest, plots_folder):\n",
+    "        correlation_matrix = self.data[variables_of_interest].corr()\n",
+    "        fig, ax = plt.subplots(figsize=(10, 8))\n",
+    "        sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', linewidths=0.5, ax=ax)\n",
+    "        plt.title('Correlación entre variables numéricas')\n",
+    "        plot_filename = os.path.join(plots_folder, 'correlation.pdf')\n",
+    "        plt.savefig(plot_filename, format='pdf')\n",
+    "        plt.close()\n",
     "\n",
     "    def plot_numeric_variable(self, variable, plots_folder):\n",
     "        # Gráfico de densidad para variables numéricas usando Matplotlib\n",
@@ -536,26 +278,36 @@
     "        plot_filename = os.path.join(plots_folder, f'{variable}.pdf')\n",
     "        plt.savefig(plot_filename, format='pdf')\n",
     "        plt.close()\n",
+    "        \n",
     "\n",
-    "        # Coeficiente V de Cramer entre las variables categóricas\n",
-    "        if top_n_categories > 1:\n",
-    "            # Limitar las categorías a las N principales\n",
-    "            top_categories = top_categories.index.tolist()\n",
-    "            self.data[variable] = self.data[variable].where(self.data[variable].isin(top_categories), 'Other')\n",
+    "    def plot_categorical_cramer_matrix(self, variables_of_interest, plots_folder):\n",
+    "        categorical_variables = [var for var in variables_of_interest if pd.api.types.is_string_dtype(self.data[var])]\n",
     "\n",
-    "            chi2_contingency_result = chi2_contingency(pd.crosstab(self.data[variable], self.data[variable]))\n",
-    "            chi2 = chi2_contingency_result[0]\n",
-    "            n = self.data.shape[0]\n",
-    "            v_cramer = np.sqrt(chi2 / (n * (top_n_categories - 1)))\n",
-    "            \n",
-    "            # Gráfico del Coeficiente V de Cramer\n",
-    "            plt.figure()\n",
-    "            plt.bar([variable], [v_cramer], color='purple', alpha=0.7)\n",
-    "            plt.title(f'Coeficiente V de Cramer para {variable}')\n",
-    "            plt.xticks(rotation=45)\n",
-    "            plot_filename = os.path.join(plots_folder, f'{variable}_cramer.pdf')\n",
-    "            plt.savefig(plot_filename, format='pdf')\n",
-    "            plt.close()\n",
+    "        num_categorical = len(categorical_variables)\n",
+    "        cramer_matrix = np.zeros((num_categorical, num_categorical))\n",
+    "\n",
+    "        for i in range(num_categorical):\n",
+    "            for j in range(i, num_categorical):\n",
+    "                if i == j:\n",
+    "                    cramer_matrix[i, j] = 1.0  # La correlación de una variable consigo misma es 1\n",
+    "                else:\n",
+    "                    contingency_table = pd.crosstab(self.data[categorical_variables[i]], self.data[categorical_variables[j]])\n",
+    "                    chi2_contingency_result = chi2_contingency(contingency_table)\n",
+    "                    chi2 = chi2_contingency_result[0]\n",
+    "                    n = self.data.shape[0]\n",
+    "                    v_cramer = np.sqrt(chi2 / (n * (min(len(self.data[categorical_variables[i]].unique()), len(self.data[categorical_variables[j]].unique())) - 1)))\n",
+    "                    cramer_matrix[i, j] = v_cramer\n",
+    "                    cramer_matrix[j, i] = v_cramer\n",
+    "\n",
+    "        fig, ax = plt.subplots(figsize=(10, 8))\n",
+    "        sns.heatmap(cramer_matrix, annot=True, cmap='coolwarm', linewidths=0.5, ax=ax, xticklabels=categorical_variables, yticklabels=categorical_variables)\n",
+    "        plt.title('Correlación de V de Cramer entre variables categóricas')\n",
+    "        plot_filename = os.path.join(plots_folder, 'cramer_matrix.pdf')\n",
+    "        plt.savefig(plot_filename, format='pdf')\n",
+    "        plt.close()\n",
+    "\n",
+    "\n",
+    "    \n",
     "            \n",
     "            \n",
     "    # 4\n",
@@ -619,28 +371,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "age-height-weight\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "profiler = Profiler(df)\n",
     "\n",
     "profiler.summarize()\n",
     "profiler.plot_vars()\n",
-    "profiler.clean_data()\n"
+    "#profiler.clean_data()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
