--- a/Proyecto1/Proyecto_enunciado.ipynb
+++ b/Proyecto1/Proyecto_enunciado.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,24 +167,32 @@
     "import shutil\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
+    "from sklearn.preprocessing import FunctionTransformer, MinMaxScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.cluster import KMeans\n",
+    "from yellowbrick.cluster import KElbowVisualizer\n",
     "\n",
     "df = pd.read_parquet('olimpiadas.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Profiler():\n",
+    "\n",
+    "\n",
     "    # 1\n",
     "    def __init__(self, data):\n",
     "        self.data = data\n",
     "        self.timestamp = datetime.now().strftime('%d-%m-%Y')\n",
     "        self.output_folder = f'EDA_{self.timestamp}'\n",
     "        os.makedirs(self.output_folder, exist_ok=True)\n",
-    "        \n",
+    "\n",
     "        \n",
     "    # 2  \n",
     "    def summarize(self, variables_of_interest=None, criteria_for_outliers=None):\n",
@@ -342,6 +350,7 @@
     "                data_to_clean.drop(columns=[non_atomic_column], inplace=True)\n",
     "\n",
     "        data_to_clean.to_csv(os.path.join(clean_data_folder, 'data.csv'), index=False)\n",
+    "        return data_to_clean\n",
     "\n",
     "    def detect_non_atomic_column(self, data):\n",
     "        # Busca una columna que contenga caracteres especiales o separadores\n",
@@ -358,7 +367,167 @@
     "                return separator\n",
     "        return None\n",
     "\n",
+    "\n",
+    "    # 5\n",
+    "    def scale(self, cat_scaler=OneHotEncoder):\n",
+    "        \"\"\"\n",
+    "        Escala los datos numéricos y categóricos del DataFrame.\n",
+    "\n",
+    "        Parámetros:\n",
+    "        - cat_scaler: Una clase de preprocesador de sklearn para datos categóricos. Debe ser compatible con el\n",
+    "          framework de `sklearn`. El default es `OneHotEncoder`.\n",
+    "        \"\"\"\n",
+    "        # Crear la carpeta 'EDA_fecha/scale'\n",
+    "        scale_folder = os.path.join(self.output_folder, 'scale')\n",
+    "        os.makedirs(scale_folder, exist_ok=True)\n",
+    "\n",
+    "        # Usar clean_data para limpiar los datos primero\n",
+    "        clean_data = self.clean_data()\n",
+    "\n",
+    "        # Definir el escalador logarítmico para transformar los datos numéricos\n",
+    "        def log_transform(x): return np.log(x + 1)\n",
+    "        log_scaler = FunctionTransformer(log_transform)\n",
+    "\n",
+    "        # Seleccionar las columnas numéricas y categóricas\n",
+    "        num_cols = clean_data.select_dtypes(include=['int64', 'float64']).columns\n",
+    "        cat_cols = clean_data.select_dtypes(include=['object', 'category', 'bool']).columns\n",
+    "\n",
+    "        # Definir el transformador de columnas para aplicar las transformaciones\n",
+    "        column_transformer = ColumnTransformer(\n",
+    "            transformers=[\n",
+    "                ('num', Pipeline(steps=[('log', log_scaler), ('minmax', MinMaxScaler())]), num_cols),\n",
+    "                ('cat', cat_scaler(), cat_cols)\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "        # Aplicar el ColumnTransformer\n",
+    "        transformed_data = column_transformer.fit_transform(clean_data)\n",
+    "\n",
+    "        # Guardar las características escaladas en un archivo CSV\n",
+    "        pd.DataFrame(self.scaled_features).to_csv(os.path.join(scale_folder, 'scaled_features.csv'), index=False)\n",
+    "\n",
+    "        return transformed_data\n",
+    "\n",
     "    \n",
+    "\n",
+    "    # 6\n",
+    "    def make_clusters(self, clustering_algorithm = KMeans(), n_clusters_range=(2, 12), plot_elbow=True):\n",
+    "        # Crear la carpeta para guardar los resultados de los clusters\n",
+    "        clusters_folder = os.path.join(self.output_folder, 'clusters')\n",
+    "        os.makedirs(clusters_folder, exist_ok=True)\n",
+    "        \n",
+    "        # Cargar y escalar los datos\n",
+    "        transformed_data = self.scale() \n",
+    "        \n",
+    "        # Inicializar el número óptimo de clústeres con None\n",
+    "        optimal_n_clusters = None\n",
+    "        \n",
+    "        # Determinar el número óptimo de clústeres si es necesario y el algoritmo lo soporta\n",
+    "        if plot_elbow and hasattr(clustering_algorithm, 'n_clusters'):\n",
+    "            elbow_model = KElbowVisualizer(clustering_algorithm, k=n_clusters_range)\n",
+    "            elbow_model.fit(transformed_data)\n",
+    "            elbow_model.show(outpath=os.path.join(clusters_folder, 'elbow_plot.png'))\n",
+    "            optimal_n_clusters = elbow_model.elbow_value_\n",
+    "            # Establecer el número óptimo de clústeres en el algoritmo\n",
+    "            clustering_algorithm.set_params(n_clusters=optimal_n_clusters)\n",
+    "        \n",
+    "        # Crear el pipeline con el algoritmo de clustering configurado\n",
+    "        pipeline = Pipeline([\n",
+    "            ('clustering', clustering_algorithm)\n",
+    "        ])\n",
+    "        \n",
+    "        # Ajustar el pipeline a los datos ya escalados\n",
+    "        pipeline.fit(transformed_data)\n",
+    "\n",
+    "        # Proyectar los datos a 2 dimensiones para visualización\n",
+    "        pca = PCA(n_components=2)\n",
+    "        reduced_data = pca.fit_transform(transformed_data)\n",
+    "        \n",
+    "        # Obtener las etiquetas del cluster\n",
+    "        labels = pipeline['clustering'].labels_\n",
+    "        \n",
+    "        # Crear un DataFrame para la visualización y guardar los resultados\n",
+    "        cluster_data = pd.DataFrame(reduced_data, columns=['PC1', 'PC2'])\n",
+    "        cluster_data['Cluster'] = labels\n",
+    "        cluster_data.to_csv(os.path.join(clusters_folder, 'cluster_data.csv'), index=False)\n",
+    "        \n",
+    "        # Graficar los clústeres\n",
+    "        self.plot_clusters(cluster_data, clusters_folder)\n",
+    "\n",
+    "        return reduced_data, cluster_data\n",
+    "        \n",
+    "    def plot_clusters(self, cluster_data, clusters_folder):\n",
+    "        plt.figure(figsize=(10, 8))\n",
+    "        plt.scatter(cluster_data['PC1'], cluster_data['PC2'], c=cluster_data['Cluster'], cmap='viridis', marker='o')\n",
+    "        plt.title('Cluster Visualization')\n",
+    "        plt.xlabel('Principal Component 1')\n",
+    "        plt.ylabel('Principal Component 2')\n",
+    "        plt.colorbar(label='Cluster')\n",
+    "        plt.savefig(os.path.join(clusters_folder, 'clusters_visualization.png'))\n",
+    "        plt.show()\n",
+    "\n",
+    "    # 7\n",
+    "    def detect_anomalies(self, algorithm):\n",
+    "        # Crear carpeta para anomalies\n",
+    "        path_anomalies = os.path.join(self.output_folder, 'anomalies')\n",
+    "        os.makedirs(path_anomalies, exist_ok=True)\n",
+    "\n",
+    "        scale_step = FunctionTransformer(self.scale)\n",
+    "\n",
+    "        # Crear el pipeline con el algoritmo de detección de anomalías\n",
+    "        pipeline = Pipeline(steps=[('preprocessor', scale_step),\n",
+    "                                   ('anomaly_detector', algorithm)])\n",
+    "\n",
+    "        # Ajustar el pipeline a los datos\n",
+    "        pipeline.fit(self.data)\n",
+    "\n",
+    "        # Detectar anomalías\n",
+    "        anomalies = pipeline.predict(self.data)\n",
+    "\n",
+    "        # Reducir la dimensionalidad para visualización\n",
+    "        pca = PCA(n_components=2)\n",
+    "        data_2d = pca.fit_transform(pipeline.named_steps['preprocessor'].transform(self.data))\n",
+    "\n",
+    "        # Graficar los resultados\n",
+    "        plt.scatter(data_2d[:, 0], data_2d[:, 1], c=anomalies, cmap='Paired')\n",
+    "        plt.title('Anomaly Detection')\n",
+    "        plt.savefig(os.path.join(path_anomalies, 'anomaly_detection.pdf'))\n",
+    "\n",
+    "        # Agregar etiquetas de anomalías al DataFrame y guardar\n",
+    "        data_with_anomalies = self.data.copy()\n",
+    "        data_with_anomalies['anomaly_label'] = anomalies\n",
+    "        data_with_anomalies.to_csv(os.path.join(path_anomalies, 'data_anomalies.csv'), index=False)\n",
+    "\n",
+    "    #8\n",
+    "    def profile(self, data, clustering_algorithm, anomaly_detection_algorithm, scaling_technique, cluster_args={}, anomaly_args={}):\n",
+    "        \"\"\"\n",
+    "        Ejecuta todos los métodos de la clase Profiler en el orden apropiado.\n",
+    "        \n",
+    "        :param data: DataFrame de pandas con los datos a analizar.\n",
+    "        :param clustering_algorithm: Algoritmo de clustering para usar en make_clusters.\n",
+    "        :param anomaly_detection_algorithm: Algoritmo para detección de anomalías para usar en detect_anomalies.\n",
+    "        :param scaling_technique: Técnicas de escalado para los datos numéricos y categóricos.\n",
+    "        :param cluster_args: Argumentos adicionales para el algoritmo de clustering.\n",
+    "        :param anomaly_args: Argumentos adicionales para el algoritmo de detección de anomalías.\n",
+    "        \"\"\"\n",
+    "        # Ejecutar el método summarize\n",
+    "        summ = self.summarize(data)\n",
+    "        \n",
+    "        # Ejecutar el método plot_vars\n",
+    "        plt_vars = self.plot_vars(data)\n",
+    "        \n",
+    "        # Limpiar y escalar los datos\n",
+    "        clean_data = self.clean_data(data)\n",
+    "        scaled_data = self.scale(clean_data, scaling_technique)\n",
+    "        \n",
+    "        # Ejecutar clustering\n",
+    "        clusters = self.make_clusters(scaled_data, clustering_algorithm, **cluster_args)\n",
+    "        \n",
+    "        # Detectar anomalías\n",
+    "        anomalies = self.detect_anomalies(scaled_data, anomaly_detection_algorithm, **anomaly_args)\n",
+    "\n",
+    "        return summ, plt_vars, clean_data, scaled_data, clusters, anomalies\n",
+    "\n",
     "\n",
     "    # 9\n",
     "    def clearGarbage(self):\n",
