--- a/Proyecto1/Proyecto_enunciado.ipynb
+++ b/Proyecto1/Proyecto_enunciado.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,16 +168,19 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import re\n",
-    "from sklearn.preprocessing import FunctionTransformer\n",
-    "\n",
-    "\n",
+    "from sklearn.preprocessing import FunctionTransformer, MinMaxScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.cluster import KMeans\n",
+    "from yellowbrick.cluster import KElbowVisualizer\n",
     "\n",
     "df = pd.read_parquet('olimpiadas.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,8 +290,8 @@
     "        self.plot_correlation(numeric_variables, plots_folder)\n",
     "\n",
     "        # Plot de matriz de correlación de V de Cramer entre variables categóricas\n",
-    "        self.plot_categorical_cramer_matrix(categorical_variables, plots_folder)\n",
-    "\n",
+    "        self.plot_cramers_heatmap(categorical_variables, plots_folder)\n",
+    "        \n",
     "        for variable in variables_of_interest:\n",
     "            if variable in self.data.columns:\n",
     "                if pd.api.types.is_numeric_dtype(self.data[variable]):\n",
@@ -358,40 +361,48 @@
     "        plt.close()\n",
     "\n",
     "\n",
-    "    def plot_categorical_cramer_matrix(self, variables_of_interest, plots_folder):\n",
+    "    # Define the Cramer's V function\n",
+    "    def cramers_V(self, var1, var2):\n",
+    "        crosstab = np.array(pd.crosstab(var1, var2, rownames=None, colnames=None))  # Cross table building\n",
+    "        stat = chi2_contingency(crosstab)[0]  # Keeping the test statistic of the Chi2 test\n",
+    "        obs = np.sum(crosstab)  # Number of observations\n",
+    "        mini = min(crosstab.shape) - 1  # Take the minimum value between the columns and the rows of the cross table\n",
+    "        return np.sqrt(stat / (obs * mini))\n",
+    "    \n",
+    "    # Define el método create_cramers_matrix \n",
+    "    def create_cramers_matrix(self, categorical_variables):\n",
+    "        rows = []\n",
+    "        data_encoded = self.data.copy()\n",
+    "        for var1 in categorical_variables:\n",
+    "            col = []\n",
+    "            for var2 in categorical_variables:\n",
+    "                cramers = self.cramers_V(data_encoded[var1], data_encoded[var2])  # Cramer's V test\n",
+    "                col.append(round(cramers, 2))  # Keeping the rounded value of the Cramer's V\n",
+    "            rows.append(col)\n",
+    "        cramers_results = np.array(rows)\n",
+    "        df = pd.DataFrame(cramers_results, columns=categorical_variables, index=categorical_variables)\n",
+    "        return df\n",
+    "\n",
+    "    \n",
+    "    def plot_cramers_heatmap(self, categorical_variables, plots_folder):\n",
     "        \"\"\"\n",
-    "        Crea una matriz de calor que muestra la correlación de V de Cramer entre variables categóricas y la guarda como un archivo PDF.\n",
+    "        Crea un gráfico de la matriz de correlación de V de Cramer entre variables categóricas y lo guarda como un archivo PDF.\n",
     "\n",
     "        Args:\n",
-    "            variables_of_interest (list): Lista de variables categóricas para las cuales se calculará la correlación de V de Cramer.\n",
+    "            categorical_variables (list): Lista de variables categóricas para las que se calculará y representará la matriz de correlación de V de Cramer.\n",
     "            plots_folder (str): Directorio donde se guardará el archivo de gráficos.\n",
     "\n",
     "        Returns:\n",
     "            None\n",
     "        \"\"\"\n",
-    "        categorical_variables = [var for var in variables_of_interest if pd.api.types.is_string_dtype(self.data[var])]\n",
+    "        cramers_matrix = self.create_cramers_matrix(categorical_variables)\n",
+    "        mask = np.zeros_like(cramers_matrix, dtype=bool)\n",
+    "        mask[np.triu_indices_from(mask)] = True\n",
     "\n",
-    "        num_categorical = len(categorical_variables)\n",
-    "        cramer_matrix = np.zeros((num_categorical, num_categorical))\n",
+    "        with sns.axes_style(\"white\"):\n",
+    "            ax = sns.heatmap(cramers_matrix, mask=mask, vmin=0., vmax=1, square=True)\n",
     "\n",
-    "        for i in range(num_categorical):\n",
-    "            for j in range(i, num_categorical):\n",
-    "                if i == j:\n",
-    "                    cramer_matrix[i, j] = 1.0  # La correlación de una variable consigo misma es 1\n",
-    "                else:\n",
-    "                    print(\"las variables pesadas son esta\", self.data[categorical_variables[i]], \"y esta\", self.data[categorical_variables[j]])\n",
-    "                    contingency_table = pd.crosstab(self.data[categorical_variables[i]], self.data[categorical_variables[j]])\n",
-    "                    chi2_contingency_result = chi2_contingency(contingency_table)\n",
-    "                    chi2 = chi2_contingency_result[0]\n",
-    "                    n = self.data.shape[0]\n",
-    "                    v_cramer = np.sqrt(chi2 / (n * (min(len(self.data[categorical_variables[i]].unique()), len(self.data[categorical_variables[j]].unique())) - 1)))\n",
-    "                    cramer_matrix[i, j] = v_cramer\n",
-    "                    cramer_matrix[j, i] = v_cramer\n",
-    "\n",
-    "        fig, ax = plt.subplots(figsize=(10, 8))\n",
-    "        sns.heatmap(cramer_matrix, annot=True, cmap='coolwarm', linewidths=0.5, ax=ax, xticklabels=categorical_variables, yticklabels=categorical_variables)\n",
-    "        plt.title('Correlación de V de Cramer entre variables categóricas')\n",
-    "        plot_filename = os.path.join(plots_folder, 'cramer_matrix.pdf')\n",
+    "        plot_filename = os.path.join(plots_folder, 'cramers_matrix.pdf')\n",
     "        plt.savefig(plot_filename, format='pdf')\n",
     "        plt.close()\n",
     "    \n",
@@ -498,7 +509,8 @@
     "            data_to_clean = impute_na_func.transform(data_to_clean)\n",
     "\n",
     "        data_to_clean.to_csv(os.path.join(clean_data_folder, 'data.csv'), index=False)\n",
-    "\n",
+    "        self.data = data_to_clean\n",
+    "        \n",
     "    def split_column(self, row):\n",
     "        \"\"\"\n",
     "        Divide una columna no atómica en elementos separados utilizando una expresión regular.\n",
@@ -528,6 +540,169 @@
     "                return column\n",
     "        return None\n",
     "    \n",
+    "     # 5\n",
+    "    def scale(self, cat_scaler=OneHotEncoder):\n",
+    "        \"\"\"\n",
+    "        Escala los datos numéricos y categóricos del DataFrame.\n",
+    "\n",
+    "        Parámetros:\n",
+    "        - cat_scaler: Una clase de preprocesador de sklearn para datos categóricos. Debe ser compatible con el\n",
+    "          framework de `sklearn`. El default es `OneHotEncoder`.\n",
+    "        \"\"\"\n",
+    "        # Crear la carpeta 'EDA_fecha/scale'\n",
+    "        scale_folder = os.path.join(self.output_folder, 'scale')\n",
+    "        os.makedirs(scale_folder, exist_ok=True)\n",
+    "\n",
+    "        # Usar clean_data para limpiar los datos primero\n",
+    "        clean_data = self.clean_data()\n",
+    "\n",
+    "        # Definir el escalador logarítmico para transformar los datos numéricos\n",
+    "        def log_transform(x): return np.log(x + 1)\n",
+    "        log_scaler = FunctionTransformer(log_transform)\n",
+    "\n",
+    "        # Seleccionar las columnas numéricas y categóricas\n",
+    "        num_cols = clean_data.select_dtypes(include=['int64', 'float64']).columns\n",
+    "        cat_cols = clean_data.select_dtypes(include=['object', 'category', 'bool']).columns\n",
+    "\n",
+    "        # Definir el transformador de columnas para aplicar las transformaciones\n",
+    "        column_transformer = ColumnTransformer(\n",
+    "            transformers=[\n",
+    "                ('num', Pipeline(steps=[('log', log_scaler), ('minmax', MinMaxScaler())]), num_cols),\n",
+    "                ('cat', cat_scaler(), cat_cols)\n",
+    "            ]\n",
+    "        )\n",
+    "\n",
+    "        # Aplicar el ColumnTransformer\n",
+    "        transformed_data = column_transformer.fit_transform(clean_data)\n",
+    "\n",
+    "        # Guardar las características escaladas en un archivo CSV\n",
+    "        pd.DataFrame(self.scaled_features).to_csv(os.path.join(scale_folder, 'scaled_features.csv'), index=False)\n",
+    "\n",
+    "        return transformed_data\n",
+    "    \n",
+    "    \n",
+    "    # 6\n",
+    "    def make_clusters(self, clustering_algorithm = KMeans(), n_clusters_range=(2, 12), plot_elbow=True):\n",
+    "        # Crear la carpeta para guardar los resultados de los clusters\n",
+    "        clusters_folder = os.path.join(self.output_folder, 'clusters')\n",
+    "        os.makedirs(clusters_folder, exist_ok=True)\n",
+    "        \n",
+    "        # Cargar y escalar los datos\n",
+    "        transformed_data = self.scale() \n",
+    "        \n",
+    "        # Inicializar el número óptimo de clústeres con None\n",
+    "        optimal_n_clusters = None\n",
+    "        \n",
+    "        # Determinar el número óptimo de clústeres si es necesario y el algoritmo lo soporta\n",
+    "        if plot_elbow and hasattr(clustering_algorithm, 'n_clusters'):\n",
+    "            elbow_model = KElbowVisualizer(clustering_algorithm, k=n_clusters_range)\n",
+    "            elbow_model.fit(transformed_data)\n",
+    "            elbow_model.show(outpath=os.path.join(clusters_folder, 'elbow_plot.png'))\n",
+    "            optimal_n_clusters = elbow_model.elbow_value_\n",
+    "            # Establecer el número óptimo de clústeres en el algoritmo\n",
+    "            clustering_algorithm.set_params(n_clusters=optimal_n_clusters)\n",
+    "        \n",
+    "        # Crear el pipeline con el algoritmo de clustering configurado\n",
+    "        pipeline = Pipeline([\n",
+    "            ('clustering', clustering_algorithm)\n",
+    "        ])\n",
+    "        \n",
+    "        # Ajustar el pipeline a los datos ya escalados\n",
+    "        pipeline.fit(transformed_data)\n",
+    "\n",
+    "        # Proyectar los datos a 2 dimensiones para visualización\n",
+    "        pca = PCA(n_components=2)\n",
+    "        reduced_data = pca.fit_transform(transformed_data)\n",
+    "        \n",
+    "        # Obtener las etiquetas del cluster\n",
+    "        labels = pipeline['clustering'].labels_\n",
+    "        \n",
+    "        # Crear un DataFrame para la visualización y guardar los resultados\n",
+    "        cluster_data = pd.DataFrame(reduced_data, columns=['PC1', 'PC2'])\n",
+    "        cluster_data['Cluster'] = labels\n",
+    "        cluster_data.to_csv(os.path.join(clusters_folder, 'cluster_data.csv'), index=False)\n",
+    "        \n",
+    "        # Graficar los clústeres\n",
+    "        self.plot_clusters(cluster_data, clusters_folder)\n",
+    "\n",
+    "        return reduced_data, cluster_data\n",
+    "        \n",
+    "    def plot_clusters(self, cluster_data, clusters_folder):\n",
+    "        plt.figure(figsize=(10, 8))\n",
+    "        plt.scatter(cluster_data['PC1'], cluster_data['PC2'], c=cluster_data['Cluster'], cmap='viridis', marker='o')\n",
+    "        plt.title('Cluster Visualization')\n",
+    "        plt.xlabel('Principal Component 1')\n",
+    "        plt.ylabel('Principal Component 2')\n",
+    "        plt.colorbar(label='Cluster')\n",
+    "        plt.savefig(os.path.join(clusters_folder, 'clusters_visualization.png'))\n",
+    "        plt.show()\n",
+    "        \n",
+    "        \n",
+    "    # 7\n",
+    "    def detect_anomalies(self, algorithm):\n",
+    "        # Crear carpeta para anomalies\n",
+    "        path_anomalies = os.path.join(self.output_folder, 'anomalies')\n",
+    "        os.makedirs(path_anomalies, exist_ok=True)\n",
+    "\n",
+    "        scale_step = FunctionTransformer(self.scale)\n",
+    "\n",
+    "        # Crear el pipeline con el algoritmo de detección de anomalías\n",
+    "        pipeline = Pipeline(steps=[('preprocessor', scale_step),\n",
+    "                                   ('anomaly_detector', algorithm)])\n",
+    "\n",
+    "        # Ajustar el pipeline a los datos\n",
+    "        pipeline.fit(self.data)\n",
+    "\n",
+    "        # Detectar anomalías\n",
+    "        anomalies = pipeline.predict(self.data)\n",
+    "\n",
+    "        # Reducir la dimensionalidad para visualización\n",
+    "        pca = PCA(n_components=2)\n",
+    "        data_2d = pca.fit_transform(pipeline.named_steps['preprocessor'].transform(self.data))\n",
+    "\n",
+    "        # Graficar los resultados\n",
+    "        plt.scatter(data_2d[:, 0], data_2d[:, 1], c=anomalies, cmap='Paired')\n",
+    "        plt.title('Anomaly Detection')\n",
+    "        plt.savefig(os.path.join(path_anomalies, 'anomaly_detection.pdf'))\n",
+    "\n",
+    "        # Agregar etiquetas de anomalías al DataFrame y guardar\n",
+    "        data_with_anomalies = self.data.copy()\n",
+    "        data_with_anomalies['anomaly_label'] = anomalies\n",
+    "        data_with_anomalies.to_csv(os.path.join(path_anomalies, 'data_anomalies.csv'), index=False)\n",
+    "\n",
+    "    \n",
+    "    #8\n",
+    "    def profile(self, data, clustering_algorithm, anomaly_detection_algorithm, scaling_technique, cluster_args={}, anomaly_args={}):\n",
+    "        \"\"\"\n",
+    "        Ejecuta todos los métodos de la clase Profiler en el orden apropiado.\n",
+    "        \n",
+    "        :param data: DataFrame de pandas con los datos a analizar.\n",
+    "        :param clustering_algorithm: Algoritmo de clustering para usar en make_clusters.\n",
+    "        :param anomaly_detection_algorithm: Algoritmo para detección de anomalías para usar en detect_anomalies.\n",
+    "        :param scaling_technique: Técnicas de escalado para los datos numéricos y categóricos.\n",
+    "        :param cluster_args: Argumentos adicionales para el algoritmo de clustering.\n",
+    "        :param anomaly_args: Argumentos adicionales para el algoritmo de detección de anomalías.\n",
+    "        \"\"\"\n",
+    "        # Ejecutar el método summarize\n",
+    "        summ = self.summarize(data)\n",
+    "        \n",
+    "        # Limpiar los datos\n",
+    "        clean_data = self.clean_data(data)\n",
+    "        \n",
+    "        # Ejecutar el método plot_vars\n",
+    "        plt_vars = self.plot_vars(data)\n",
+    "        \n",
+    "        # Escalar los datos\n",
+    "        scaled_data = self.scale(clean_data, scaling_technique)\n",
+    "        \n",
+    "        # Ejecutar clustering\n",
+    "        clusters = self.make_clusters(scaled_data, clustering_algorithm, **cluster_args)\n",
+    "        \n",
+    "        # Detectar anomalías\n",
+    "        anomalies = self.detect_anomalies(scaled_data, anomaly_detection_algorithm, **anomaly_args)\n",
+    "\n",
+    "        return summ, plt_vars, clean_data, scaled_data, clusters, anomalies\n",
+    "\n",
     "\n",
     "    # 9\n",
     "    def clearGarbage(self):\n",
@@ -546,12 +721,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "profiler = Profiler(df)\n",
-    "\n",
-    "#profiler.summarize()\n",
-    "\n",
-    "profiler.clean_data()\n",
-    "#profiler.plot_vars()"
+    "profiler = Profiler(df)"
    ]
   },
   {
