--- a/Proyecto1/Proyecto_enunciado.ipynb
+++ b/Proyecto1/Proyecto_enunciado.ipynb
@@ -154,11 +154,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 9,
-=======
-   "execution_count": 6,
->>>>>>> origin/proyecto1_debug
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,15 +176,10 @@
     "from sklearn.ensemble import IsolationForest\n",
     "from sklearn.base import BaseEstimator\n",
     "from yellowbrick.cluster import KElbowVisualizer\n",
-<<<<<<< HEAD
     "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.base import ClusterMixin\n",
-=======
->>>>>>> origin/proyecto1_debug
     "#df = pd.read_parquet('olimpiadas.parquet')\n",
-
-    "from sklearn.ensemble import IsolationForest\n",
-
+    "from sklearn.ensemble import IsolationForest\n"
    ]
   },
   {
@@ -794,10 +785,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 11,
-=======
->>>>>>> origin/proyecto1_debug
    "metadata": {},
    "outputs": [
     {
